// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoLink Autolink component with the default props renders the AutoLink component correctly 1`] = `
<Text
  style={Object {}}
  testID="test-testID"
/>
`;

exports[`AutoLink Autolink component without default props renders the AutoLink component correctly 1`] = `
<Text
  style={Object {}}
  testID="test-testID"
>
  <Text>
    Text for test with link 
  </Text>
  <Text
    onLongPress={[Function]}
    onPress={[Function]}
    style={
      Object {
        "color": "#12A3BE",
        "fontWeight": "bold",
      }
    }
  >
    google.com
  </Text>
</Text>
`;

exports[`AutoLink Text node with link wraps a url in a link Text node 1`] = `
<Text
  style={Object {}}
  testID="autolink-testID"
>
  <Text>
    Text for test with link 
  </Text>
  <Text
    onLongPress={[Function]}
    onPress={[Function]}
    style={
      Object {
        "color": "#12A3BE",
        "fontWeight": "bold",
      }
    }
  >
    google.com
  </Text>
</Text>
`;

exports[`AutoLink Text node without link renders a Text node correctly 1`] = `
<Text
  style={Object {}}
  testID="autolink-testID"
>
  <Text>
    Text for test
  </Text>
</Text>
`;
